# xai

./: .gitignore  README.md  hw1.ipynb  image_downloader.py  import_tests.ipynb  interpretations.ipynb  pyproject.toml
CAV/: TCAV-resnet.ipynb  utils.py
Counterfactuals/: Counterfactuals_multiobj.ipynb
LIME/: image_LIME.ipynb
LOFO_SAGE/: LOFO.ipynb  SAGE.ipynb
PDP_ALE/: accumulated_local_effects.ipynb  partial_dependence_plot.ipynb
Shapley_SHAP/: SHAP.ipynb  Shapley.ipynb
Transformers/: Transformers.ipynb
xai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
