[project]
name = "xai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=1.22,<2.4",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "xgboost>=3.1.3",
    "torch",
    "transformers>=4.57.5",
    "lime>=0.2.0.1",
    "torchvision",
    "llvmlite>=0.46.0",
    "numba>=0.58.0",
    "dcor>=0.6",
    "shap>=0.49.1",
    "sape>=0.1.1",
    "pillow>=12.1.0",
    "ipython>=9.9.0",
    "seaborn>=0.13.2",
    "scikit-image>=0.26.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
# torchvision = [
#     { index = "pytorch-cpu" },
# ]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]

[tool.ruff]
exclude = [ '*.ipynb']

[tool.setuptools]
packages = ['counterfactuals', 'CAV', 'Transformers']

